maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:11: error: not found: value loop
  loop;breakable{
  ^ShortestPathMaze:11: error: not found: value breakable
  loop;breakable{
       ^ShortestPathMaze:17: error: not found: value loop
          loop;break;
          ^ShortestPathMaze:17: error: not found: value break
          loop;break;
               ^